Meta description updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Prepárate para los exámenes y descubre el fascinante mundo de la ciencia con los cursos del Cursillo Max Planck en matemática, física y más." />
+    <meta name="description" 
+      content="Cursillo Max Planck en Luque: el mejor cursillo de apoyo y preparación para exámenes, becas y colegios técnicos. Cursos de informática, matemática, física y más. Profesores altamente capacitados en Luque." 
+    />
+    <meta name="keywords" 
+      content="cursillo de Luque, Luque, mejor cursillo de Luque, informática en Luque, curso de informática, profesores de matemática, cursillo para becas, cursillo para colegios técnicos, CCTL, centro de capacitación técnica de Luque, IPT, CTN" 
+    />
     <meta name="robots" content="index, follow" />
     <meta property="og:title" content="Cursillo Max Planck - Ciencia para Jóvenes" />
     <meta property="og:description" content="Cursos presenciales y virtuales para estudiantes apasionados por aprender." />
